[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["flask", "pydantic"]
sections = FUTURE,STDLIB,FLASK,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 3
include_trailing_comma = true
force_single_line = true
ensure_newline_before_comments = true
lines_after_imports = 2
skip_glob = ["**/venv/*", "**tests*.py"]